[project]
name = "nascent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "authlib>=1.7.2",
    "cryptography>=49.0.0",
    "fastapi>=0.138.0",
    "gitpython>=3.1.50",
    "groq>=1.5.0",
    "itsdangerous>=2.2.0",
    "langchain>=1.3.11",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pygithub>=2.9.1",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "unidiff>=0.7.5",
    "uvicorn>=0.49.0",
]
